...
        return resultText
    }
    
    private func showNextQuestionOrResults() {
        if self.isLastQuestion() {
            let quizResult = QuizResultViewModel(
                title: "Этот раунд окончен!",
                text: makeResultsMessage(),
                buttonText: "Сыграть еще раз"
            )
            viewController?.show(quiz: quizResult)
        } else {
            self.switchToNextQuestion()
...
